--- a/app/views/provider_interface/decisions/new_offer.html.erb
+++ b/app/views/provider_interface/decisions/new_offer.html.erb
@@ -1,34 +1,34 @@
-<% content_for :browser_title, title_with_error_prefix('Conditions of offer', @application_offer.errors.any?) %>
+<% content_for :browser_title, title_with_error_prefix('Conditions of offer', @make_offer_form.errors.any?) %>
 <% content_for :before_content, govuk_back_link_to(provider_interface_application_choice_respond_path(@application_choice.id)) %>
 
 <%= render(FlashMessageComponent.new(flash: flash)) %>
 
-<%= form_with model: @application_offer, url: provider_interface_application_choice_confirm_offer_path(@application_choice.id), method: :post do |f| %>
+<%= form_with model: @make_offer_form, url: provider_interface_application_choice_confirm_offer_path(@application_choice.id), method: :post do |f| %>
   <%= f.govuk_error_summary %>
-  <%= hidden_field_tag :course_option_id, @application_offer.course_option.id %>
 
-	<h1 class="govuk-heading-xl">
-		<span class="govuk-caption-xl"><%= @application_choice.application_form.full_name %></span>
-		Conditions of offer
-	</h1>
+  <h1 class="govuk-heading-xl">
+    <span class="govuk-caption-xl"><%= @application_choice.application_form.full_name %></span>
+    Conditions of offer
+  </h1>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <%= f.govuk_collection_check_boxes(
             :standard_conditions,
-            standard_conditions_checkboxes,
+            @make_offer_form.standard_conditions_checkboxes,
             :id,
             :name,
             legend: { text: 'Standard conditions', size: 'm', tag: 'h2' },
       ) %>
 
+      <%= f.hidden_field :course_option_id %>
+
       <%= f.govuk_fieldset legend: { text: 'Further conditions (optional)', size: 'm' } do %>
         <p class="govuk-body">Outline any further conditions (for example, studying a subject knowledge enhancement course) and give deadlines for completing them.</p>
-
-        <%= f.govuk_text_area :further_conditions0, label: { text: t('activemodel.attributes.support_interface/new_offer.further_conditions0'), size: 's' }, rows: 3 %>
-        <%= f.govuk_text_area :further_conditions1, label: { text: t('activemodel.attributes.support_interface/new_offer.further_conditions1'), size: 's' }, rows: 3 %>
-        <%= f.govuk_text_area :further_conditions2, label: { text: t('activemodel.attributes.support_interface/new_offer.further_conditions2'), size: 's' }, rows: 3 %>
-        <%= f.govuk_text_area :further_conditions3, label: { text: t('activemodel.attributes.support_interface/new_offer.further_conditions3'), size: 's' }, rows: 3 %>
+          <%= f.fields_for :further_conditions do |fc| %>
+            <%= fc.hidden_field :id %>
+            <%= fc.govuk_text_area :condition_text %>
+          <% end %>
       <% end %>
 
       <%= f.govuk_submit 'Continue' %>
