--- a/app/views/provider_interface/interviews/new.html.erb
+++ b/app/views/provider_interface/interviews/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with model: @new_interview_form,
+    <%= form_with model: @interview_form,
           url: provider_interface_application_choice_check_interview_path(@application_choice.id),
           method: :get do |f| %>
 
