Add Organisation Carrying out Interview to Interview_details

--- a/app/views/provider_interface/interviews/new.html.erb
+++ b/app/views/provider_interface/interviews/new.html.erb
@@ -16,10 +16,10 @@
 
       <%= f.govuk_text_field :time, width: 5, label: { text: 'Time', size: 'm' }, hint: { text: 'For example, 9am or 2:30pm - enter 12pm for midday' } %>
 
-      <% if make_decisions_permission_orgs.count > 1 %>
-        <%= f.govuk_radio_buttons_fieldset :provider_ids, legend: { text: 'Organisation carrying out interview', size: 'm' } do %>
-          <% make_decisions_permission_orgs.each do |provider| %>
-            <%= f.govuk_radio_button :provider_ids, provider.id, label: { text: provider.name } %>
+      <% if @interview_form.make_decisions_permission_orgs.count > 1 %>
+        <%= f.govuk_radio_buttons_fieldset :provider_id, legend: { text: 'Organisation carrying out interview', size: 'm' } do %>
+          <% @interview_form.make_decisions_permission_orgs.each do |provider| %>
+            <%= f.govuk_radio_button :provider_id, provider.id, label: { text: provider.name } %>
           <% end %>
         <% end %>
       <% end %>
