--- a/app/components/provider_interface/application_choice_header_component.html.erb
+++ b/app/components/provider_interface/application_choice_header_component.html.erb
@@ -24,8 +24,8 @@
           </p>
 
           <% if FeatureFlag.active?(:interviews) %>
-            <%= govuk_button_link_to 'Set up interview', new_provider_interface_application_choice_interview_path(application_choice) %>
-            <%= govuk_button_link_to 'Make decision', provider_interface_application_choice_respond_path(application_choice), class: 'govuk-button--secondary' %>
+            <%= govuk_button_link_to 'Set up interview', new_provider_interface_application_choice_interviews_path(application_choice) %>
+            <%= govuk_button_link_to 'Make a decision', provider_interface_application_choice_respond_path(application_choice), class: 'govuk-button--secondary' %>
           <% else %>
             <%= govuk_button_link_to 'Make decision', provider_interface_application_choice_respond_path(application_choice), class: 'govuk-button' %>
           <% end %>
