Improve wording on "Your email address is not recognised"
When providers try to sign in to Manage with an invalid email we show
them a message.

Improve this message by

- replacing "signed in to DfE" with "signed in to DfE Sign-in"
- replace mentions of Apply with Manage, and consistently refer to
Manage by its full name.

--- a/app/views/provider_interface/email_address_not_recognised.html.erb
+++ b/app/views/provider_interface/email_address_not_recognised.html.erb
@@ -7,20 +7,20 @@
     </h1>
 
     <p class="govuk-body">
-      You have signed in to DfE as
+      You are signed in to DfE Sign-in as
       <span style="white-space: nowrap;">
-        <%= @dfe_sign_in_user&.email_address %>
+        <%= @dfe_sign_in_user&.email_address %>.
       </span>
     </p>
 
     <p class="govuk-body">
-      We can’t find an ‘<%= t('service_name.apply') %>’ account associated with that address.
-      Please <%= govuk_link_to 'sign in', provider_interface_applications_path %>
-      again, using the email address associated with your Apply account.
+      We can’t find a <%= t('service_name.manage') %> account associated with that address.
+      Please <%= govuk_link_to 'sign in again', provider_interface_applications_path %>
+    using the email address associated with your <%= t('service_name.manage') %> account.
     </p>
 
     <p class="govuk-body">
-      If you are using the correct email address to sign in to Apply and you’re still receiving this message, please contact us at
+      If you are using the correct email address to sign in to <%= t('service_name.manage') %> and you’re still receiving this message, please contact us at
       <%= bat_contact_mail_to %>.
     </p>
   </div>
