--- a/app/components/provider_interface/provider_user_permissions_form_component.html.erb
+++ b/app/components/provider_interface/provider_user_permissions_form_component.html.erb
@@ -31,26 +31,23 @@
       <%= f.govuk_check_boxes_fieldset :permissions, legend: { text: 'Select permissions', size: 'm' } do %>
 
         <%= f.govuk_check_box(
-          :manage_organisations,
-          true,
-          multiple: false,
+          :permissions,
+          'manage_organisations',
           label: { text: 'Manage organisational permissions' },
           hint: { text: 'Change permissions between organisations' },
           link_errors: true,
         ) %>
 
         <%= f.govuk_check_box(
-          :manage_users,
-          true,
-          multiple: false,
+          :permissions,
+          'manage_users',
           label: { text: 'Manage users' },
           hint: { text: 'Invite or delete users and set their permissions' },
         ) %>
 
         <%= f.govuk_check_box(
-          :make_decisions,
-          true,
-          multiple: false,
+          :permissions,
+          'make_decisions',
           label: { text: 'Make decisions' },
           hint: { text: 'Make offers, amend offers and reject applications' },
         ) %>
@@ -63,9 +60,8 @@
         </div>
 
         <%= f.govuk_check_box(
-          :view_safeguarding_information,
-          true,
-          multiple: false,
+          :permissions,
+          'view_safeguarding_information',
           label: { text: 'Access safeguarding information' },
           hint: { text: 'View sensitive material about the candidate' },
         ) %>
@@ -78,9 +74,8 @@
         </div>
 
         <%= f.govuk_check_box(
-          :view_diversity_information,
-          true,
-          multiple: false,
+          :permissions,
+          'view_diversity_information',
           label: { text: 'Access diversity information' },
           hint: { text: 'View diversity information about the candidate' },
         ) %>
