--- a/app/views/api_docs/vendor_api/reference/reference.html.erb
+++ b/app/views/api_docs/vendor_api/reference/reference.html.erb
@@ -1,4 +1,4 @@
-<h1 class="govuk-heading-xl"><%= t('page_titles.api_docs.reference') %></h1>
+<h1 class="govuk-heading-xl"><%= t('page_titles.api_docs.vendor_api.reference') %></h1>
 
 <h2 class="app-contents-list__title">Contents</h2>
 
